<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_black_568h_2x"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/layoutHeader"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bt_multi_select_2x"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnPicturesDiscover"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.3"
            android:background="@android:color/transparent"
            android:text="@string/PICTURES"
            android:textColor="@color/bt_multi_text_color" />

        <ImageView
            android:id="@+id/separatorMulti"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:scaleType="fitXY"
            android:background="@drawable/bt_multi_select_bar_2x"/>

        <Button
            android:id="@+id/btnPeopleDiscover"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.3"
            android:background="@android:color/transparent"
            android:text="@string/PEOPLE"
            android:textColor="@color/bt_multi_text_color" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:background="@drawable/bg_tab_bar"
        android:gravity="center"
        android:padding="4dp"
        android:weightSum="1" >

        <EditText
            android:id="@+id/txtBuscadorDiscoverPictures"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/bg_bio_textbox_2x"
            android:gravity="center_vertical"
            android:hint="@string/PLACEHOLDER_SEARCH_PICS"
            android:inputType="textPersonName"
            android:maxLength="30" >

            <requestFocus />
        </EditText>

        <ImageView
            android:id="@+id/btnBorrarTextoPictures"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="4dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/close" />

        <EditText
            android:id="@+id/txtBuscadorDiscoverPeople"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/bg_bio_textbox_2x"
            android:hint="@string/PLACEHOLDER_SEARCH_USERS"
            android:inputType="textPersonName"
            android:maxLength="30"
            android:visibility="invisible" >

        </EditText>

        <ImageView
            android:id="@+id/btnBorrarTextoPeople"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="4dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/close"
            android:visibility="invisible" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        android:background="@drawable/bg_clear_paper_2x">
        
        <TextView
            android:id="@+id/lblTrendingUsers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:textSize="20sp"
            android:textColor="@color/blanco"
            android:textStyle="bold"
            android:background="@color/gris"
            android:text="@string/TRENDING_USERS" />

        <GridView
            android:id="@+id/gridViewDiscover"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingTop="8dp"
            android:paddingRight="8dp"
            android:cacheColorHint="@android:color/transparent"
            android:listSelector="@android:color/transparent"
            android:numColumns="3"
            android:visibility="visible" >
        </GridView>

        <ListView
            android:id="@+id/listViewDiscover"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:cacheColorHint="@android:color/transparent"
            android:layout_below="@+id/lblTrendingUsers"
            android:fadingEdge="none"
            android:listSelector="@android:color/transparent"
            android:visibility="visible" >
        </ListView>

        <Button
            android:id="@+id/btnRetryDiscover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/retry"
            android:visibility="invisible" />
    </RelativeLayout>

</LinearLayout>