<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent" 
    android:orientation="vertical" >

    <TableRow
        android:id="@+id/tableFooterTabs"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_tab_bar"
        android:orientation="horizontal"
        android:weightSum="1" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/btnFriends"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bt_friends"
                android:layout_marginBottom="-13dp"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/lblFriends"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/FRIENDS"
                android:textColor="@color/blanco"
                android:textStyle="bold"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/btnFeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bt_feed"
                android:layout_marginBottom="-13dp"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/lblFeed"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/FEED"
                android:textColor="@color/blanco"
                android:textStyle="bold"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/btnTakePic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_tab_takepic_selector"
                android:layout_marginBottom="-13dp"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/lblTakePic"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/CAMERA"
                android:textColor="@color/blanco"
                android:textStyle="bold"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/btnMeAndMine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bt_profile"
                android:layout_marginBottom="-13dp"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/lblMeAndMine"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/PROFILE"
                android:textColor="@color/blanco"
                android:textStyle="bold"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/btnDiscover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bt_search"
                android:layout_marginBottom="-13dp"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/lblDiscover"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/SEARCH"
                android:textColor="@color/blanco"
                android:textStyle="bold"
                android:textSize="10sp" />
        </LinearLayout>
    </TableRow>

</LinearLayout>